[java] modify base64